--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <biojava3.version>3.0.8</biojava3.version>
+        <forester.version>1.005</forester.version>
     </properties>
 
     <dependencies>
@@ -54,7 +55,7 @@
         <dependency>
             <groupId>org.forester</groupId>
             <artifactId>forester-lgpl</artifactId>
-            <version>1.005</version>
+            <version>${forester.version}</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -62,7 +63,7 @@
         <dependency>
             <groupId>org.forester</groupId>
             <artifactId>forester-lgpl</artifactId>
-            <version>1.005</version>
+            <version>${forester.version}</version>
             <type>source</type>
         </dependency>
 
@@ -72,8 +73,15 @@
             <version>1.3</version>
         </dependency>
 
-
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>biojava-maven-repo</id>
+            <name>BioJava repository</name>
+            <url>http://www.biojava.org/download/maven/</url>
+        </repository>
+    </repositories>
 
 
 </project>
