--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,20 @@
             <artifactId>jgrapht</artifactId>
             <version>0.7.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>jgrapht</groupId>
+            <artifactId>jgrapht</artifactId>
+            <version>0.7.3</version>
+            <classifier>sources</classifier>
+        </dependency>
+
         <dependency>
             <groupId>net.databinder.spde</groupId>
             <artifactId>processing-core</artifactId>
             <version>1.0.3__0.1.3</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -38,6 +47,13 @@
 
         <dependency>
             <groupId>org.biojava</groupId>
+            <artifactId>biojava3-core</artifactId>
+            <version>${biojava3.version}</version>
+            <classifier>sources</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>org.biojava</groupId>
             <artifactId>biojava3-alignment</artifactId>
             <version>${biojava3.version}</version>
             <!--<scope>system</scope>-->
@@ -46,10 +62,22 @@
 
         <dependency>
             <groupId>org.biojava</groupId>
+            <artifactId>biojava3-alignment</artifactId>
+            <version>${biojava3.version}</version>
+            <classifier>sources</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>org.biojava</groupId>
             <artifactId>biojava3-phylo</artifactId>
             <version>${biojava3.version}</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/biojava3-phylo-3.0.8.jar</systemPath>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.biojava</groupId>
+            <artifactId>biojava3-phylo</artifactId>
+            <version>${biojava3.version}</version>
+            <classifier>sources</classifier>
         </dependency>
 
         <dependency>
@@ -64,13 +92,26 @@
             <groupId>org.forester</groupId>
             <artifactId>forester-lgpl</artifactId>
             <version>${forester.version}</version>
-            <type>source</type>
+            <classifier>sources</classifier>
         </dependency>
 
         <dependency>
             <groupId>com.googlecode.charts4j</groupId>
             <artifactId>charts4j</artifactId>
             <version>1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.charts4j</groupId>
+            <artifactId>charts4j</artifactId>
+            <version>1.3</version>
+            <classifier>sources</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>net.databinder.spde</groupId>
+            <artifactId>processing-pdf</artifactId>
+            <version>1.0.3__0.1.3</version>
         </dependency>
 
     </dependencies>
